# texwriter

./: README.md  com.github.molnarandris.texwriter.json  io.github.molnarandris.TeXWriter.json  meson.build
data/: com.github.molnarandris.texwriter.desktop.in  com.github.molnarandris.texwriter.gschema.xml  com.github.molnarandris.texwriter.metainfo.xml.in  com.github.molnarandris.texwriter.service.in  io.github.molnarandris.TeXWriter.desktop.in  io.github.molnarandris.TeXWriter.gschema.xml  io.github.molnarandris.TeXWriter.metainfo.xml.in  io.github.molnarandris.TeXWriter.service.in  meson.build
data/completion/: latex-document.cwl
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: asyncio.py  editor.blp  editor.py  latexbuffer.py  latexfile.py  logviewer.blp  logviewer.py  main.py  meson.build  pdfviewer.blp  pdfviewer.py  preferences.blp  preferences.py  style.css  texwriter.gresource.xml  texwriter.in  utils.py  window.blp  window.py  window.ui
src/gtk/: help-overlay.blp  help-overlay.ui
